BUG#20821 (INSERT DELAYED fails to write some rows to binlog): Reverting to old behaviour of writing the query before all rows have been written.